# visualmap

./: .gitignore  AI_CONTEXT.md  BUG_CYCLE_V2.md  README.md  RELEASE_NOTES.md  build_exe.ps1  pbir-mock.py  pyproject.toml
pbir_mock/: __init__.py  cli.py  discovery.py  models.py  numbering.py  validate.py
pbir_mock/exporters/: __init__.py  inventory.py  mock_viewer.py  pdf_annotator.py  validation.py
pbir_mock/parsers/: __init__.py  bookmark_parser.py  navigation_parser.py  report_parser.py
pbir_mock/utils/: __init__.py  coord_map.py
